* created functionality for storing endpoints config * added README

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 FRONTEND_BASIC_AUTH_USER=""
 FRONTEND_BASIC_AUTH_PASSWORD=""
+API_CUSTOMER_AUTH_USERNAME=""
+API_CUSTOMER_AUTH_PASSWORD=""
+API_BASE_URL=""
